<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CropAddEditFragment"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_semi_transparent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                style="@style/textHeaderViewStyle"
                android:text="@string/actual_data"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/crop_name"/>

                <EditText
                    android:id="@+id/cropNameView"
                    style="@style/textEditViewStyle"/>

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/temperature"/>

                <EditText
                    android:id="@+id/temperatureView"
                    style="@style/textEditViewStyle"/>

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/rainfall"/>

                <EditText
                    android:id="@+id/rainfallView"
                    style="@style/textEditViewStyle"/>

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/soils"/>

                <EditText
                    android:id="@+id/soilView"
                    style="@style/textEditViewStyle"/>

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/water_level"/>

                <EditText
                    android:id="@+id/waterlevelView"
                    style="@style/textEditViewStyle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sensorLayoutView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    style="@style/textHeaderViewStyle"
                    android:text="@string/sensor_data"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">

                    <TextView
                        style="@style/textViewStyle"
                        android:text="@string/temperature"/>

                    <EditText
                        android:id="@+id/sensortemperatureView"
                        style="@style/textEditViewStyle"/>

                    <TextView
                        style="@style/textViewStyle"
                        android:text="@string/rainfall"/>

                    <EditText
                        android:id="@+id/sensorrainfallView"
                        style="@style/textEditViewStyle"/>

                    <TextView
                        style="@style/textViewStyle"
                        android:text="@string/soils"/>

                    <EditText
                        android:id="@+id/sensorsoilView"
                        style="@style/textEditViewStyle"/>

                    <TextView
                        style="@style/textViewStyle"
                        android:text="@string/water_level"/>

                    <EditText
                        android:id="@+id/sensorwaterlevelView"
                        style="@style/textEditViewStyle"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>