<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Actvities.CropViewActivity">

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/observableScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/image"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/actualDataLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/actual_data"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="0.5"
                            android:layout_marginRight="3dp">

                            <android.support.design.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:background="@drawable/temp_bg"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/temperature"/>

                                    <TextView
                                        android:id="@+id/temperatureView"
                                        style="@style/valueTextStyle"/>

                                </LinearLayout>

                            </android.support.design.card.MaterialCardView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="3dp">

                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:background="@drawable/rain_fall">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/rainfall"/>

                                    <TextView
                                        android:id="@+id/rainfallView"
                                        style="@style/valueTextStyle"/>

                                </LinearLayout>

                            </android.support.v7.widget.CardView>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="0.5"
                            android:layout_marginRight="3dp">

                            <android.support.design.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:background="@drawable/soil_bg"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/soils"/>

                                    <TextView
                                        android:id="@+id/soilView"
                                        style="@style/valueTextStyle"/>
                                </LinearLayout>

                            </android.support.design.card.MaterialCardView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="3dp">

                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:background="@drawable/waterlevel_bg">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/water_level"/>

                                    <TextView
                                        android:id="@+id/waterlevelView"
                                        style="@style/valueTextStyle"/>


                                </LinearLayout>

                            </android.support.v7.widget.CardView>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sensorDataLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/sensor_data"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="0.5"
                            android:layout_marginRight="3dp">

                            <android.support.design.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:background="@drawable/temp_bg"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/temperature"/>

                                    <TextView
                                        android:id="@+id/sensortemperatureView"
                                        style="@style/valueTextStyle"/>

                                </LinearLayout>

                            </android.support.design.card.MaterialCardView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="3dp">

                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:background="@drawable/rain_fall">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/rainfall"/>

                                    <TextView
                                        android:id="@+id/sensorrainfallView"
                                        style="@style/valueTextStyle"/>

                                </LinearLayout>

                            </android.support.v7.widget.CardView>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="0.5"
                            android:layout_marginRight="3dp">

                            <android.support.design.card.MaterialCardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:background="@drawable/soil_bg"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/soils"/>

                                    <TextView
                                        android:id="@+id/sensorsoilView"
                                        style="@style/valueTextStyle"/>
                                </LinearLayout>

                            </android.support.design.card.MaterialCardView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="3dp">

                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:background="@drawable/waterlevel_bg">

                                    <TextView
                                        style="@style/headerTextStyle"
                                        android:text="@string/water_level"/>

                                    <TextView
                                        android:id="@+id/sensorwaterlevelView"
                                        style="@style/valueTextStyle"/>


                                </LinearLayout>

                            </android.support.v7.widget.CardView>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/debugMainLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.5"
                            android:background="@color/white"
                            android:padding="5dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="Debug View"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/fileNameView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:padding="5dp"
                            android:textSize="14sp"
                            android:visibility="gone"
                            android:textColor="@color/black" />
                    </LinearLayout>
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        app:cardElevation="15dp"
                        android:layout_margin="5dp">

                        <ImageView
                            android:id="@+id/debugImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"/>


                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <TextView
                    style="@style/headerTextStyle"
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:visibility="gone"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/descriptionView"
                    style="@style/valueTextStyle"
                    android:gravity="left"
                    android:visibility="gone"
                    android:textColor="@color/black_semi_transparent"
                    />

            </LinearLayout>

        </RelativeLayout>

    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/Toolbar" />
</FrameLayout>